--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.1/angular.min.js"></script>
       <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
+      <script src="app.js"></script>
+      <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
